Fixed spacing between the links

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -26,8 +26,10 @@ body {
 .left-links,
 .right-links {
   display: flex;
+  gap: 20px;
   list-style-type: none;
   padding: 0px;
+  margin: 15px;
 }
 
 a {
